# docverify-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docverify/: __init__.py  client.py  errors.py  models.py
tests/: test_client.py
