[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docverify"
version = "1.0.0"
description = "Python SDK for the DocVerify document verification API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bogdan Balan", email = "bogdan.v.balan@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["docverify", "verification", "nli", "hallucination-detection", "ai-safety", "fact-checking"]

dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21.0",
]

[project.urls]
Homepage = "https://docverify.dev"
Documentation = "https://docs.docverify.dev"
Repository = "https://github.com/bogdanvbalan/docverify-python"
Changelog = "https://github.com/bogdanvbalan/docverify-python/blob/main/CHANGELOG.md"
Issues = "https://github.com/bogdanvbalan/docverify-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["docverify"]
